--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <main class="main">
-      <h1>Typing Game</h1>
+      <h1 class="title">Typing Game</h1>
       <section class="board">
         <h2 class="level">Level 1</h2>
         <ul class="status">
