--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <section class="keyboard">
         <h2 class="a11y-hidden">KeyBoard</h2>
         <div class="keyboard-top">
-          <div data-key="81" class="key"><kbd>Q</kbd></div>
-          <div data-key="87" class="key"><kbd>W</kbd></div>
+          <div data-key="81" class="key key-sign"><kbd>Q</kbd></div>
+          <div data-key="87" class="key key-hit"><kbd>W</kbd></div>
           <div data-key="69" class="key"><kbd>E</kbd></div>
           <div data-key="82" class="key"><kbd>R</kbd></div>
           <div data-key="84" class="key"><kbd>T</kbd></div>
