--- a/index.html
+++ b/index.html
@@ -22,46 +22,46 @@
       <section class="keyboard">
         <h2 class="a11y-hidden">KeyBoard</h2>
         <div class="keyboard-top">
-          <div data-key="81" class="key"><kbd>Q</kbd></div>
-          <div data-key="87" class="key"><kbd>W</kbd></div>
-          <div data-key="69" class="key"><kbd>E</kbd></div>
-          <div data-key="82" class="key"><kbd>R</kbd></div>
-          <div data-key="84" class="key"><kbd>T</kbd></div>
-          <div data-key="89" class="key"><kbd>Y</kbd></div>
-          <div data-key="85" class="key"><kbd>U</kbd></div>
-          <div data-key="73" class="key"><kbd>I</kbd></div>
-          <div data-key="79" class="key"><kbd>O</kbd></div>
-          <div data-key="80" class="key"><kbd>P</kbd></div>
-          <div data-key="219" class="key"><kbd>[</kbd></div>
-          <div data-key="221" class="key"><kbd>]</kbd></div>
+          <div data-code="KeyQ" class="key"><kbd>Q</kbd></div>
+          <div data-code="KeyW" class="key"><kbd>W</kbd></div>
+          <div data-code="KeyE" class="key"><kbd>E</kbd></div>
+          <div data-code="KeyR" class="key"><kbd>R</kbd></div>
+          <div data-code="KeyT" class="key"><kbd>T</kbd></div>
+          <div data-code="KeyY" class="key"><kbd>Y</kbd></div>
+          <div data-code="KeyU" class="key"><kbd>U</kbd></div>
+          <div data-code="KeyI" class="key"><kbd>I</kbd></div>
+          <div data-code="KeyO" class="key"><kbd>O</kbd></div>
+          <div data-code="KeyP" class="key"><kbd>P</kbd></div>
+          <div data-code="BracketLeft" class="key"><kbd>[</kbd></div>
+          <div data-code="BracketRight" class="key"><kbd>]</kbd></div>
         </div>
         <div class="keyboard-mid">
-          <div data-key="65" class="key"><kbd>A</kbd></div>
-          <div data-key="83" class="key"><kbd>S</kbd></div>
-          <div data-key="68" class="key"><kbd>D</kbd></div>
-          <div data-key="70" class="key"><kbd>F</kbd></div>
-          <div data-key="71" class="key"><kbd>G</kbd></div>
-          <div data-key="72" class="key"><kbd>H</kbd></div>
-          <div data-key="74" class="key"><kbd>J</kbd></div>
-          <div data-key="75" class="key"><kbd>K</kbd></div>
-          <div data-key="76" class="key"><kbd>L</kbd></div>
-          <div data-key="186" class="key"><kbd>;</kbd></div>
-          <div data-key="222" class="key"><kbd>'</kbd></div>
+          <div data-code="KeyA" class="key"><kbd>A</kbd></div>
+          <div data-code="KeyS" class="key"><kbd>S</kbd></div>
+          <div data-code="KeyD" class="key"><kbd>D</kbd></div>
+          <div data-code="KeyF" class="key"><kbd>F</kbd></div>
+          <div data-code="KeyG" class="key"><kbd>G</kbd></div>
+          <div data-code="KeyH" class="key"><kbd>H</kbd></div>
+          <div data-code="KeyJ" class="key"><kbd>J</kbd></div>
+          <div data-code="KeyK" class="key"><kbd>K</kbd></div>
+          <div data-code="KeyL" class="key"><kbd>L</kbd></div>
+          <div data-code="Semicolon" class="key"><kbd>;</kbd></div>
+          <div data-code="Quote" class="key"><kbd>'</kbd></div>
         </div>
         <div class="keyboard-bottom">
-          <div data-key="90" class="key"><kbd>Z</kbd></div>
-          <div data-key="88" class="key"><kbd>X</kbd></div>
-          <div data-key="67" class="key"><kbd>C</kbd></div>
-          <div data-key="86" class="key"><kbd>V</kbd></div>
-          <div data-key="66" class="key"><kbd>B</kbd></div>
-          <div data-key="78" class="key"><kbd>N</kbd></div>
-          <div data-key="77" class="key"><kbd>M</kbd></div>
-          <div data-key="188" class="key"><kbd>,</kbd></div>
-          <div data-key="190" class="key"><kbd>.</kbd></div>
-          <div data-key="191" class="key"><kbd>/</kbd></div>
+          <div data-code="KeyZ" class="key"><kbd>Z</kbd></div>
+          <div data-code="KeyX" class="key"><kbd>X</kbd></div>
+          <div data-code="KeyC" class="key"><kbd>C</kbd></div>
+          <div data-code="KeyV" class="key"><kbd>V</kbd></div>
+          <div data-code="KeyB" class="key"><kbd>B</kbd></div>
+          <div data-code="KeyN" class="key"><kbd>N</kbd></div>
+          <div data-code="KeyM" class="key"><kbd>M</kbd></div>
+          <div data-code="Comma" class="key"><kbd>,</kbd></div>
+          <div data-code="Period" class="key"><kbd>.</kbd></div>
+          <div data-code="Slash" class="key"><kbd>/</kbd></div>
         </div>
         <div class="keyboard-special">
-          <div data-key="32" class="key"><kbd>SPACE</kbd></div>
+          <div data-code="Space" class="key"><kbd>SPACE</kbd></div>
         </div>
       </section>
     </main>
