feat: Add countdown function before start
- Make `space` key to start
- Add countdown before start

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div data-code="Slash" class="key right-little"><kbd>/</kbd></div>
         </div>
         <div class="keyboard-special">
-          <div data-code="Space" class="key"><kbd>SPACE</kbd></div>
+          <div data-code="Space" class="key press"><kbd>SPACE</kbd></div>
         </div>
       </section>
       <section class="hands">
